reset_css and style.css make

--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
-<!DOCTYPE html lang="ja">
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>rano_publicity</title>
 </head>
 <body>
+  <div>
+
+  </div>
   <section>
     profile
   </section>
+  <section>
+    SKILLS
+  </section>
+  <section>
+    SAMPLES
+  </section>
+  <section>
+    ABOUT
+  </section>
+  <div>
+
+  </div>
 </body>
 </html>
