--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <title>rano_publicity</title>
-</head>
-<body>
-  <div>
+  <head>
+      <meta charset="UTF-8">
+      <link rel="stylesheet" href="reset.css">
+      <link rel="stylesheet" href="/css/style.css">
+      <title>rano_publicity</title>
+  </head>
+  <body>
+    <div class="menu-wrapper">
+      <div class="menu-spacer">
+      </div>
+      <div class="menu-item">
+        <section>
+          profile
+        </section>
+      </div>
+      <div class="menu-item">
+        <section>
+          SKILLS
+        </section>
+      </div>
+      <div class="menu-item">
+        <section>
+          SAMPLES
+        </section>
+      </div>
+      <div class="menu-item">
+        <section>
+          ABOUT
+        </section>
+      </div>
+      <div class="menu-spacer">
+      </div>
+    </div>
 
-  </div>
-  <section>
-    profile
-  </section>
-  <section>
-    SKILLS
-  </section>
-  <section>
-    SAMPLES
-  </section>
-  <section>
-    ABOUT
-  </section>
-  <div>
-
-  </div>
-</body>
+    <script src="//code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script>
+      window.alert($.fn.jquery);
+    </script>
+  </body>
 </html>
