--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         </section>
       </div>
       <div class="menu-item">
+        <canvas id="canvas"></canvas>
         <section>
           SKILLS
         </section>
+        
       </div>
       <div class="menu-item">
         <section>
@@ -35,8 +37,9 @@
     </div>
 
     <script src="//code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script>
+    <!-- <script>
       window.alert($.fn.jquery);
-    </script>
+    </script> -->
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
