--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="menu-item">
         <canvas id="canvas"></canvas>
         <section>
-          SKILLS
+          <p>SKILLS</p>
         </section>
         
       </div>
