animate and canvas hover

--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
       <div class="menu-spacer">
       </div>
       <div class="menu-item">
+        <canvas class="item-canvas" width="300" height="300"></canvas>
         <section>
           profile
         </section>
       </div>
       <div class="menu-item">
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas" class="item-canvas" width="300" height="300"></canvas>
         <section>
           <p>SKILLS</p>
         </section>
-        
       </div>
       <div class="menu-item">
+        <canvas class="item-canvas" width="300" height="300"></canvas>
         <section>
           SAMPLES
         </section>
       </div>
       <div class="menu-item">
+        <canvas class="item-canvas" width="300" height="300"></canvas>
         <section>
           ABOUT
         </section>
