test css transform

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="ja">
 <html>
   <head>
       <meta charset="UTF-8">
@@ -18,7 +18,7 @@
         </section>
       </div>
       <div class="menu-item">
-        <canvas id="canvas" class="item-canvas" width="300" height="300"></canvas>
+        <canvas class="item-canvas" width="300" height="300"></canvas>
         <section>
           <p>SKILLS</p>
         </section>
@@ -30,7 +30,7 @@
         </section>
       </div>
       <div class="menu-item">
-        <canvas class="item-canvas" width="300" height="300"></canvas>
+        <canvas id="canvas" class="item-canvas" width="300" height="300"></canvas>
         <section>
           ABOUT
         </section>
