html content injection

--- a/index.html
+++ b/index.html
@@ -8,131 +8,55 @@
   </head>
   
   <body>
-    <div class="menu-wrapper">
-      
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      
-      <!-- <div class="menu-spacer">
+    <div>
+      <h1>ポートフォリオサイト</h1>
+    </div>
+
+    <div>
+      <div>
+        <h2>プロフィール</h2>
+        HN？
+        居住地?
+        経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。
+        希望職種：フロントエンドエンジニア
+        就労形態：オープン就労を目指しています。
+        座右の銘：
       </div>
-      <div class="menu-item">
-        <canvas class="item-canvas" width="300" height="300"></canvas>
-        <section>
-          profile
-        </section>
+      <div>
+        <h2>できること</h2>
+        webコーディング
+        UIデザイン
+        画像処理
+        映像処理
+        使用言語
+        HTML/CSS/SCSS
+        JavaScript/jQuery
+        C
+        Java
+        Python
+        SQL
+        VBA
       </div>
-      <div class="menu-item">
-        <canvas class="item-canvas" width="300" height="300"></canvas>
-        <section>
-          <p>SKILLS</p>
-        </section>
+      <div>
+        <h2>使用ツール</h2>
+        VSCode
+        WIX/webflow
+        Git
+        Figma
+        Adobe Photoshop
+        Adobe premiere
+        MariaDB
+        Slack/Chatwork/Zoom
       </div>
-      <div class="menu-item">
-        <canvas class="item-canvas" width="300" height="300"></canvas>
-        <section>
-          SAMPLES
-        </section>
+      <div>
+        <h2>習得中</h2>
+        Typescript
+        React
+        Rust
+        Docker
+        担当案件・作例
       </div>
-      <div class="menu-item">
-        <canvas id="canvas" class="item-canvas" width="300" height="300"></canvas>
-        <section>
-          ABOUT
-        </section>
-      </div>
-      <div class="menu-spacer">
-      </div>
-    </div> -->
+    </div>
 
     <script src="//code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
