--- a/index.html
+++ b/index.html
@@ -15,46 +15,55 @@
     <div>
       <div>
         <h2>プロフィール</h2>
-        HN？
-        居住地?
-        経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。
-        希望職種：フロントエンドエンジニア
-        就労形態：オープン就労を目指しています。
-        座右の銘：
+        <section>
+          HN？
+          居住地?
+          経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。
+          希望職種：フロントエンドエンジニア
+          就労形態：オープン就労を目指しています。
+          座右の銘：
+        </section>
       </div>
       <div>
         <h2>できること</h2>
-        webコーディング
-        UIデザイン
-        画像処理
-        映像処理
-        使用言語
-        HTML/CSS/SCSS
-        JavaScript/jQuery
-        C
-        Java
-        Python
-        SQL
-        VBA
+        <section>
+          コーディング
+          UIデザイン
+          画像処理
+          映像処理
+          使用言語
+          HTML/CSS/SCSS
+          JavaScript/jQuery
+          C
+          Java
+          Python
+          SQL
+          VBA
+        </section>
       </div>
       <div>
         <h2>使用ツール</h2>
-        VSCode
-        WIX/webflow
-        Git
-        Figma
-        Adobe Photoshop
-        Adobe premiere
-        MariaDB
-        Slack/Chatwork/Zoom
+        <section>
+          WIX/webflow
+          Git
+          Figma
+          Adobe Photoshop
+          Adobe premiere
+          MariaDB
+          Slack/Chatwork/Zoom
+        </section>
       </div>
       <div>
         <h2>習得中</h2>
-        Typescript
-        React
-        Rust
-        Docker
-        担当案件・作例
+          <section> 
+            Typescript
+            React
+            Rust
+            Docker
+          </section>
+      </div>
+      <div>
+        <h2>担当案件・作例</h2>
       </div>
     </div>
 
