--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
       <meta charset="UTF-8">
+      <meta name=”viewport” content=”width=device-width,initial-scale=1″>
       <link rel="stylesheet" href="reset.css">
       <link rel="stylesheet" href="/css/style.css">
       <title>rano_publicity</title>
@@ -12,62 +13,62 @@
       <h1>ポートフォリオサイト</h1>
     </div>
 
-    <div>
-      <div>
+    <div id="contents-tab">
+      <section>
         <h2>プロフィール</h2>
-        <section>
-          HN？
-          居住地?
-          経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。
-          希望職種：フロントエンドエンジニア
-          就労形態：オープン就労を目指しています。
-          座右の銘：
-        </section>
-      </div>
-      <div>
-        <h2>できること</h2>
-        <section>
-          コーディング
-          UIデザイン
-          画像処理
-          映像処理
-          使用言語
-          HTML/CSS/SCSS
-          JavaScript/jQuery
-          C
-          Java
-          Python
-          SQL
-          VBA
-        </section>
-      </div>
-      <div>
+        <p>
+          HN？<br>
+          居住地?<br>
+          経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。<br>
+          希望職種：フロントエンドエンジニア<br>
+          就労形態：オープン就労を目指しています。<br>
+          座右の銘：<br>
+        </p>
+      </section>
+      <section>
+        <h2>できること</h2> 
+        <p>     
+          コーディング<br>
+          UIデザイン<br>
+          画像処理<br>
+          映像処理<br>
+          使用言語<br>
+          HTML/CSS/SCSS<br>
+          JavaScript/jQuery<br>
+          C<br>
+          Java<br>
+          Python<br>
+          SQL<br>
+          VBA<br>
+        </p>
+      </section>
+      <section>
         <h2>使用ツール</h2>
-        <section>
-          WIX/webflow
-          Git
-          Figma
-          Adobe Photoshop
-          Adobe premiere
-          MariaDB
-          Slack/Chatwork/Zoom
-        </section>
-      </div>
-      <div>
-        <h2>習得中</h2>
-          <section> 
-            Typescript
-            React
-            Rust
-            Docker
-          </section>
-      </div>
-      <div>
+        <p>
+          WIX/webflow<br>
+          Git<br>
+          Figma<br>
+          Adobe Photoshop<br>
+          Adobe premiere<br>
+          MariaDB<br>
+          Slack/Chatwork/Zoom<br>
+        </p>
+      </section>
+      <section>
+        <h2>習得中</h2> 
+        <p>
+          Typescript<br>
+          React<br>
+          Rust<br>
+          Docker<br>
+        </p>
+      </section>
+      <section>
         <h2>担当案件・作例</h2>
-      </div>
+      </section>
     </div>
 
-    <script src="//code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
