--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
       </section>
       <section>
         <h2>担当案件・作例</h2>
+        <p>
+          -text-          
+        </p>
       </section>
     </div>
 
