--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
     <div id="contents-tab">
       <section>
         <h2>プロフィール</h2>
-        <p>
-          HN？<br>
-          居住地?<br>
-          経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。<br>
-          希望職種：フロントエンドエンジニア<br>
-          就労形態：オープン就労を目指しています。<br>
-          座右の銘：<br>
-        </p>
+        <div class="tab-content">
+          <p>
+            HN？<br>
+            居住地?<br>
+            経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。<br>
+            希望職種：フロントエンドエンジニア<br>
+            就労形態：オープン就労を目指しています。<br>
+            座右の銘：<br>
+          </p>
+        </div>
       </section>
       <section>
         <h2>できること</h2> 
-        <p>     
+        <div class="tab-content">
+          <p>     
           コーディング<br>
           UIデザイン<br>
           画像処理<br>
@@ -40,11 +43,13 @@
           Python<br>
           SQL<br>
           VBA<br>
-        </p>
+          </p>
+        </div>
       </section>
       <section>
         <h2>使用ツール</h2>
-        <p>
+        <div class="tab-content">
+          <p>
           WIX/webflow<br>
           Git<br>
           Figma<br>
@@ -52,22 +57,27 @@
           Adobe premiere<br>
           MariaDB<br>
           Slack/Chatwork/Zoom<br>
-        </p>
+          </p>
+        </div>
       </section>
       <section>
         <h2>習得中</h2> 
-        <p>
+        <div class="tab-content">
+          <p>
           Typescript<br>
           React<br>
           Rust<br>
           Docker<br>
-        </p>
+          </p>
+        </div>
       </section>
       <section>
         <h2>担当案件・作例</h2>
-        <p>
+        <div class="tab-content">
+          <p>
           -text-          
-        </p>
+          </p>
+        </div>
       </section>
     </div>
 
