--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
       <meta charset="UTF-8">
       <meta name=”viewport” content=”width=device-width,initial-scale=1″>
       <link rel="stylesheet" href="reset.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Zen+Kaku+Gothic+New:wght@500&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="/css/style.css">
       <title>rano_publicity</title>
   </head>
   
   <body>
     <div>
-      <h1>ポートフォリオサイト</h1>
+      <h1>ポートフォリオ：RANO</h1>
     </div>
 
     <div id="contents-tab">
       <section>
-        <h2>プロフィール</h2>
+        <div class="tab-title">
+          <h2>プロフィール</h2>
+        </div>
         <div class="tab-content">
           <p>
-            HN？<br>
-            居住地?<br>
+            HN：RANO<br>
+            居住地：関東<br>
             経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。<br>
             希望職種：フロントエンドエンジニア<br>
             就労形態：オープン就労を目指しています。<br>
@@ -28,14 +33,17 @@
         </div>
       </section>
       <section>
-        <h2>できること</h2> 
+        <div class="tab-title">
+          <h2>できること</h2>
+        </div>  
         <div class="tab-content">
           <p>     
           コーディング<br>
           UIデザイン<br>
           画像処理<br>
           映像処理<br>
-          使用言語<br>
+          <br>
+          *使用言語*<br>
           HTML/CSS/SCSS<br>
           JavaScript/jQuery<br>
           C<br>
@@ -47,7 +55,9 @@
         </div>
       </section>
       <section>
-        <h2>使用ツール</h2>
+        <div class="tab-title">
+          <h2>使用ツール</h2>
+        </div>
         <div class="tab-content">
           <p>
           WIX/webflow<br>
@@ -61,7 +71,9 @@
         </div>
       </section>
       <section>
-        <h2>習得中</h2> 
+        <div class="tab-title">
+          <h2>習得中</h2>
+        </div>  
         <div class="tab-content">
           <p>
           Typescript<br>
@@ -72,10 +84,13 @@
         </div>
       </section>
       <section>
-        <h2>担当案件・作例</h2>
+        <div class="tab-title">
+          <h2>連絡先</h2>
+        </div>
         <div class="tab-content">
           <p>
-          -text-          
+          email<br>
+          github<br>        
           </p>
         </div>
       </section>
