text and paragraph adjust

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </div>
         <div class="tab-content">
           <p>
-            HN：RANO<br>
+            ハンドルネーム：RANO<br>
             居住地：関東<br>
             経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。<br>
-            希望職種：フロントエンドエンジニア<br>
+            希望職種：Webエンジニア<br>
             就労形態：オープン就労を目指しています。<br>
             座右の銘：<br>
           </p>
@@ -38,35 +38,36 @@
         </div>  
         <div class="tab-content">
           <p>     
-          コーディング<br>
-          UIデザイン<br>
-          画像処理<br>
-          映像処理<br>
-          <br>
-          *使用言語*<br>
-          HTML/CSS/SCSS<br>
-          JavaScript/jQuery<br>
-          C<br>
-          Java<br>
-          Python<br>
-          SQL<br>
-          VBA<br>
+            コーディング<br>
+            UIデザイン<br>
+            画像処理<br>
+            映像処理<br>
+            <br>
           </p>
         </div>
       </section>
       <section>
         <div class="tab-title">
-          <h2>使用ツール</h2>
+          <h2>使用言語・ツール</h2>
         </div>
         <div class="tab-content">
           <p>
-          WIX/webflow<br>
-          Git<br>
-          Figma<br>
-          Adobe Photoshop<br>
-          Adobe premiere<br>
-          MariaDB<br>
-          Slack/Chatwork/Zoom<br>
+            HTML/CSS/SCSS<br>
+            JavaScript/jQuery<br>
+            C<br>
+            Java<br>
+            Python<br>
+            SQL<br>
+            VBA<br>
+          </p>
+          <p>
+            WIX/webflow<br>
+            Git<br>
+            Figma<br>
+            Adobe Photoshop<br>
+            Adobe premiere<br>
+            MariaDB<br>
+            Slack/Chatwork/Zoom<br>
           </p>
         </div>
       </section>
