--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="ja">
   <head>
       <meta charset="UTF-8">
-      <meta name=”viewport” content=”width=device-width,initial-scale=1″>
+      <meta name="viewport" content="width=device-width,initial-scale=1">
       <link rel="stylesheet" href="reset.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Zen+Kaku+Gothic+New:wght@500&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="/css/style.css">
+      
       <title>rano_publicity</title>
   </head>
   
@@ -28,7 +29,6 @@
             経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。<br>
             希望職種：Webエンジニア<br>
             就労形態：オープン就労を目指しています。<br>
-            座右の銘：<br>
           </p>
         </div>
       </section>
@@ -96,8 +96,9 @@
         </div>
       </section>
     </div>
-
+    <div class="scroll-guide"><p>vvv scroll vvv</p></div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
+    
   </body>
 </html>
