ui guide fix, tab border

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
       </section>
     </div>
-    <div class="scroll-guide"><p>vvv scroll vvv</p></div>
+    <div class="scroll-guide"><p>vvv SCROLL vvv</p></div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     
