--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
         <div class="tab-content">
           <p>
           email<br>
-          github<br>        
+          <br>
+          <a href="https://github.com/ranopub">GitHub</a><br>        
           </p>
         </div>
       </section>
