--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   
   <body>
     <div>
-      <h1>RANOのポートフォリオ</h1>
+      <h1>工事中！！RANOのポートフォリオ</h1>
     </div>
 
     <div id="contents-tab">
       <section>
-        <div class="tab-title">
+        <div class="tab-title profile">
           <h2>プロフィール</h2>
         </div>
-        <div class="tab-content">
+        <div class="tab-content profile">
           <p>
             ハンドルネーム：RANO<br>
             居住地：関東<br>
