--- a/index.html
+++ b/index.html
@@ -17,100 +17,125 @@
       <h1>工事中！！RANOのポートフォリオ</h1>
     </div>
 
-    <div id="contents-tab">
-      <section>
-        <div class="tab-title profile">
-          <h2>プロフィール</h2>
-        </div>
-        <div class="tab-content profile">
-          <p>
-            ハンドルネーム：RANO<br>
-            居住地：関東<br>
-            経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。<br>
-            希望職種：Webエンジニア<br>
-            就労形態：オープン就労を目指しています。<br>
-          </p>
-        </div>
-      </section>
-      <section>
-        <div class="tab-title">
-          <h2>できること</h2>
-        </div>  
-        <div class="tab-content">
-          <p>     
-            コーディング<br>
-            UIデザイン<br>
-            画像処理<br>
-            映像処理<br>
-            <br>
-          </p>
-        </div>
-      </section>
-      <section>
-        <div class="tab-title">
-          <h2>使用言語・ツール</h2>
-        </div>
-        <div class="tab-content">
-          <p>
-            HTML/CSS/SCSS<br>
-            JavaScript/jQuery<br>
-            C<br>
-            Java<br>
-            Python<br>
-            SQL<br>
-            VBA<br>
-          </p>
-          <p>
-            WIX/webflow<br>
-            Git<br>
-            Figma<br>
-            Adobe Photoshop<br>
-            Adobe premiere<br>
-            MariaDB<br>
-            Slack/Chatwork/Zoom<br>
-          </p>
-        </div>
-      </section>
-      <section>
-        <div class="tab-title">
-          <h2>習得中</h2>
-        </div>  
-        <div class="tab-content">
-          <p>
-          Typescript<br>
-          React<br>
-          Rust<br>
-          Docker<br>
-          </p>
-        </div>
-      </section>
-      <section>
-        <div class="tab-title">
-          <h2>作例</h2>
-        </div>  
-        <div class="tab-content">
-          <p>
-          portforio.io<br>
-          ??<br>
-          ??<br>
-          ??<br>
-          ??</p>
-        </div>
-      </section>
-      <section>
-        <div class="tab-title">
-          <h2>連絡先</h2>
-        </div>
-        <div class="tab-content">
-          <p>
-          email<br>
+    <section id="nav">
+      <div class="tab-title">
+        <h2>プロフィール</h2>
+      </div>
+      <div class="tab-title">
+        <h2>できること</h2>
+      </div>
+      <div class="tab-title">
+        <h2>使用言語・ツール</h2>
+      </div>
+      <div class="tab-title">
+        <h2>習得中</h2>
+      </div>
+      <div class="tab-title">
+        <h2>作例</h2>
+      </div>
+      <div class="tab-title">
+        <h2>連絡先</h2>
+      </div>
+    </section>
+
+    <section id="profile" class="content">
+      <div class="tab-title profile">
+        <h2>プロフィール</h2>
+      </div>
+      <div class="tab-content profile">
+        <p>
+          ハンドルネーム：RANO<br>
+          居住地：関東<br>
+          経歴：1987年生。大学中退後、ITの世界に転身を決意。UI/UXに興味を持ち、フロントエンドエンジニアを志望。<br>
+          希望職種：Webエンジニア<br>
+          就労形態：オープン就労を目指しています。<br>
+        </p>
+      </div>
+    </section>
+
+    <section id="skill" class="content">
+      <div class="tab-title">
+        <h2>できること</h2>
+      </div>  
+      <div class="tab-content">
+        <p>     
+          コーディング<br>
+          UIデザイン<br>
+          画像処理<br>
+          映像処理<br>
           <br>
-          <a href="https://github.com/ranopub">GitHub</a><br>        
-          </p>
-        </div>
-      </section>
-    </div>
-    <div class="scroll-guide"><p>vvv SCROLL vvv</p></div>
+        </p>
+      </div>
+    </section>
+
+    <section id="lang-tool" class="content">
+      <div class="tab-title">
+        <h2>使用言語・ツール</h2>
+      </div>
+      <div class="tab-content">
+        <p>
+          HTML/CSS/SCSS<br>
+          JavaScript/jQuery<br>
+          C<br>
+          Java<br>
+          Python<br>
+          SQL<br>
+          VBA<br>
+        </p>
+        <p>
+          WIX/webflow<br>
+          Git<br>
+          Figma<br>
+          Adobe Photoshop<br>
+          Adobe premiere<br>
+          MariaDB<br>
+          Slack/Chatwork/Zoom<br>
+        </p>
+      </div>
+    </section>
+
+    <section id="training" class="content">
+      <div class="tab-title">
+        <h2>習得中</h2>
+      </div>  
+      <div class="tab-content">
+        <p>
+        Typescript<br>
+        React<br>
+        Rust<br>
+        Docker<br>
+        </p>
+      </div>
+    </section>
+
+    <section id="works" class="content">
+      <div class="tab-title">
+        <h2>作例</h2>
+      </div>  
+      <div class="tab-content">
+        <p>
+        portforio.io<br>
+        ??<br>
+        ??<br>
+        ??<br>
+        ??</p>
+      </div>
+    </section>
+
+    <section id="contact" class="content">
+      <div class="tab-title">
+        <h2>連絡先</h2>
+      </div>
+      <div class="tab-content">
+        <p>
+        email<br>
+        <br>
+        <a href="https://github.com/ranopub">GitHub</a><br>        
+        </p>
+      </div>
+    </section>
+  
+    <!-- <div class="scroll-guide"><p>vvv SCROLL vvv</p></div> -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     
