--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <h2>作例</h2>
       </div>
       <div class="tab-title">
-        <h2>連絡先</h2>
+        <a href="#contact">
+          <h2>連絡先</h2>
+        </a>
       </div>
     </section>
 
