--- a/index.html
+++ b/index.html
@@ -18,26 +18,37 @@
     </div>
 
     <section id="nav">
-      <div class="tab-title">
-        <h2>プロフィール</h2>
-      </div>
-      <div class="tab-title">
-        <h2>できること</h2>
-      </div>
-      <div class="tab-title">
-        <h2>使用言語・ツール</h2>
-      </div>
-      <div class="tab-title">
-        <h2>習得中</h2>
-      </div>
-      <div class="tab-title">
-        <h2>作例</h2>
-      </div>
-      <div class="tab-title">
-        <a href="#contact">
+      <a href="#profile">
+        <div class="tab-title">
+          <h2>プロフィール</h2>
+        </div>
+      </a>
+      <a href="#skill">
+        <div class="tab-title">
+          <h2>できること</h2>
+        </div>
+      </a>
+      <a href="#lang-tool">
+        <div class="tab-title">
+          <h2>使用言語・ツール</h2>
+        </div>
+      </a>
+      <a href="#training">
+        <div class="tab-title">
+          <h2>習得中</h2>
+        </div>
+      </a>
+      <a href="#works">
+        <div class="tab-title">
+          <h2>作例</h2>
+        </div>
+      </a>
+      <a href="#contact">
+        <div class="tab-title">
           <h2>連絡先</h2>
-        </a>
-      </div>
+        </div>
+      </a>
+      
     </section>
 
     <section id="profile" class="content">
@@ -56,7 +67,9 @@
     </section>
 
     <section id="skill" class="content">
-      <div class="tab-title">
+      </a>
+      <a href="#contact">
+        <div class="tab-title">
         <h2>できること</h2>
       </div>  
       <div class="tab-content">
@@ -71,7 +84,9 @@
     </section>
 
     <section id="lang-tool" class="content">
-      <div class="tab-title">
+      </a>
+      <a href="#contact">
+        <div class="tab-title">
         <h2>使用言語・ツール</h2>
       </div>
       <div class="tab-content">
@@ -97,7 +112,9 @@
     </section>
 
     <section id="training" class="content">
-      <div class="tab-title">
+      </a>
+      <a href="#contact">
+        <div class="tab-title">
         <h2>習得中</h2>
       </div>  
       <div class="tab-content">
@@ -111,7 +128,9 @@
     </section>
 
     <section id="works" class="content">
-      <div class="tab-title">
+      </a>
+      <a href="#contact">
+        <div class="tab-title">
         <h2>作例</h2>
       </div>  
       <div class="tab-content">
@@ -125,7 +144,9 @@
     </section>
 
     <section id="contact" class="content">
-      <div class="tab-title">
+      </a>
+      <a href="#contact">
+        <div class="tab-title">
         <h2>連絡先</h2>
       </div>
       <div class="tab-content">
