work-text-change

--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
     </section>
 
     <section id="skill" class="content">
-      </a>
-      <a href="#contact">
         <div class="tab-title">
         <h2>できること</h2>
       </div>  
@@ -84,8 +82,7 @@
     </section>
 
     <section id="lang-tool" class="content">
-      </a>
-      <a href="#contact">
+
         <div class="tab-title">
         <h2>使用言語・ツール</h2>
       </div>
@@ -112,8 +109,7 @@
     </section>
 
     <section id="training" class="content">
-      </a>
-      <a href="#contact">
+
         <div class="tab-title">
         <h2>習得中</h2>
       </div>  
@@ -128,24 +124,22 @@
     </section>
 
     <section id="works" class="content">
-      </a>
-      <a href="#contact">
+
         <div class="tab-title">
         <h2>作例</h2>
       </div>  
       <div class="tab-content">
         <p>
-        portforio.io<br>
+        https://ranopub.github.io/portfolio/<br>
         このサイトです。<br>
         <br>
-        https://www.business.prog-8.com/sub/lp/itschool<br>
-        就労移行での実習の一環としてWEBFLOWでの実装の一部を担当しました。</p>
+        <a href="https://www.business.prog-8.com/sub/lp/itschool">itschool</a><br>
+        就労移行での実習の一環としてWebflowでの実装の一部を担当いたしました。</p>
       </div>
     </section>
 
     <section id="contact" class="content">
-      </a>
-      <a href="#contact">
+
         <div class="tab-title">
         <h2>連絡先</h2>
       </div>
