--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
           <h2>連絡先</h2>
         </div>
       </a>
-      
     </section>
 
     <section id="profile" class="content">
@@ -83,7 +82,7 @@
 
     <section id="lang-tool" class="content">
 
-        <div class="tab-title">
+      <div class="tab-title">
         <h2>使用言語・ツール</h2>
       </div>
       <div class="tab-content">
@@ -133,14 +132,16 @@
         https://ranopub.github.io/portfolio/<br>
         このサイトです。<br>
         <br>
-        <a href="https://www.business.prog-8.com/sub/lp/itschool">itschool</a><br>
+        <a href="https://www.business.prog-8.com/sub/lp/itschool">
+          itschool
+        </a><br>
         就労移行での実習の一環としてWebflowでの実装の一部を担当いたしました。</p>
       </div>
     </section>
 
     <section id="contact" class="content">
 
-        <div class="tab-title">
+      <div class="tab-title">
         <h2>連絡先</h2>
       </div>
       <div class="tab-content">
