email-address-display

--- a/index.html
+++ b/index.html
@@ -145,9 +145,13 @@
         <h2>連絡先</h2>
       </div>
       <div class="tab-content">
-        <p>
+        <div>
         email<br>
-        <br>
+          <p>
+            rano_portfolio@<span class="atmark"> a </span>outlook.jp
+          </p>        
+        </div>
+        <p>
         <a href="https://github.com/ranopub">GitHub</a><br>        
         </p>
       </div>
