email-address-fix

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Zen+Kaku+Gothic+New:wght@500&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/style.css">
       
       <title>rano_publicity</title>
@@ -66,11 +67,11 @@
     </section>
 
     <section id="skill" class="content">
-        <div class="tab-title">
+      <div class="tab-title">
         <h2>できること</h2>
       </div>  
       <div class="tab-content">
-        <p>     
+        <p> 
           コーディング<br>
           UIデザイン<br>
           画像処理<br>
@@ -129,13 +130,14 @@
       </div>  
       <div class="tab-content">
         <p>
-        https://ranopub.github.io/portfolio/<br>
-        このサイトです。<br>
-        <br>
-        <a href="https://www.business.prog-8.com/sub/lp/itschool">
-          itschool
-        </a><br>
-        就労移行での実習の一環としてWebflowでの実装の一部を担当いたしました。</p>
+          ■https://ranopub.github.io/portfolio/<br>
+          このサイトです。<br>
+          <br>
+          <a href="https://www.business.prog-8.com/sub/lp/itschool">
+          ■Progate for Business | Progate 企業・法人向けプラン | 就労移行ITスクール
+          </a><br>
+          就労移行での実習の一環としてWebflowでの実装の一部を担当いたしました。
+        </p>
       </div>
     </section>
 
@@ -146,13 +148,10 @@
       </div>
       <div class="tab-content">
         <div>
-        email<br>
-          <p>
-            rano_portfolio@<span class="atmark"> a </span>outlook.jp
-          </p>        
+        email : rano_portfolio <span class="atmark">a</span> outlook.jp
         </div>
         <p>
-        <a href="https://github.com/ranopub">GitHub</a><br>        
+          <a href="https://github.com/ranopub">GitHub</a><br>        
         </p>
       </div>
     </section>
