--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <body>
     <div>
-      <h1>工事中！！RANOのポートフォリオ</h1>
+      <h1>RANOのポートフォリオ</h1>
     </div>
 
     <section id="nav">
@@ -134,7 +134,7 @@
           このサイトです。<br>
           <br>
           <a href="https://www.business.prog-8.com/sub/lp/itschool">
-          ■Progate for Business | Progate 企業・法人向けプラン | 就労移行ITスクール
+          <u>■Progate for Business | Progate 企業・法人向けプラン | 就労移行ITスクール</u>
           </a><br>
           就労移行での実習の一環としてWebflowでの実装の一部を担当いたしました。
         </p>
@@ -148,10 +148,10 @@
       </div>
       <div class="tab-content">
         <div>
-        email : rano_portfolio <span class="atmark">a</span> outlook.jp
+        ■rano_portfolio <span class="atmark">a</span> outlook.jp
         </div>
         <p>
-          <a href="https://github.com/ranopub">GitHub</a><br>        
+          <a href="https://github.com/ranopub">■<u>GitHub</u></a><br>        
         </p>
       </div>
     </section>
