tile-rotate-test

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
         </p>
       </div>
     </section>
+
+    <div class="draw-section"></div>
   
     <!-- <div class="scroll-guide"><p>vvv SCROLL vvv</p></div> -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
