--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <p>
           ■https://ranopub.github.io/portfolio/<br>
           このサイトです。<br>
+          HTML/CSS/JavaScript+jQueryで制作しました。<br>
           <br>
           <a href="https://www.business.prog-8.com/sub/lp/itschool">
           <u>■Progate for Business | Progate 企業・法人向けプラン | 就労移行ITスクール</u>
