--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
       </div>
       <div class="tab-content">
         <p>
-          HTML/CSS/SCSS<br>
-          JavaScript/jQuery<br>
+          <img src="image/HTML5_Logo.svg" alt="HTML5 logo"> HTML/CSS<br>
+          <img src="image/Sass Logo (Color).png" alt="Sass logo">Sass<br>
+          <img src="image/js.svg" alt="Js logo">JavaScript<br>
+          <img src="image/jQuery-Logo.png" alt="jQuery logo">jQuery<br>
           C<br>
           Java<br>
           Python<br>
@@ -98,7 +100,7 @@
         </p>
         <p>
           WIX/webflow<br>
-          Git<br>
+          Git/GitHub<br>
           Figma<br>
           Adobe Photoshop<br>
           Adobe premiere<br>
@@ -159,7 +161,12 @@
 
     <div class="draw-section"></div>
   
-    <!-- <div class="scroll-guide"><p>vvv SCROLL vvv</p></div> -->
+    <div class="license">
+      <p>© 2023 ranopub</p>
+      <p>"HTML5 LOGO" by <a href="https://www.w3.org">W3C</a> is licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
+      <p>"Sass LOGO" by <a href="https://sass-lang.com/styleguide/brand/">Sass</a> is licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
+      <p>This project is licensed under the MIT License, see <a href="https://licenses.opensource.jp/MIT/MIT.html">the MIT License</a></p>
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     
