logo-img-complete-and-tilecolor-fix

--- a/index.html
+++ b/index.html
@@ -86,26 +86,34 @@
       <div class="tab-title">
         <h2>使用言語・ツール</h2>
       </div>
-      <div class="tab-content">
+      <div class="tab-content" id="tool">
         <p>
           <img src="image/HTML5_Logo.svg" alt="HTML5 logo"> HTML/CSS<br>
           <img src="image/Sass Logo (Color).png" alt="Sass logo">Sass<br>
           <img src="image/js.svg" alt="Js logo">JavaScript<br>
           <img src="image/jQuery-Logo.png" alt="jQuery logo">jQuery<br>
-          C<br>
+          <img src="image/The_C_Programming_Language_logo.svg" alt="C logo">C<br>
           Java<br>
-          Python<br>
+          <img src="image/python-logo-only.svg" alt="python logo">Python<br>
           SQL<br>
           VBA<br>
         </p>
         <p>
-          WIX/webflow<br>
-          Git/GitHub<br>
-          Figma<br>
+          <img src="image/webflow-mark-box-vector-blue.svg" alt="webflow logo">webflow<br>
+          <img src="image/Git-Logo-2Color.svg" alt="Git logo">Git<br>
+          <img src="image/github-mark.svg" alt="GitHub mark">GitHub<br>
+          <img src="image/Figma-Icon.svg" alt="Figma logo">Figma<br>
           Adobe Photoshop<br>
           Adobe premiere<br>
-          MariaDB<br>
-          Slack/Chatwork/Zoom<br>
+          <img src="image/vertical-logo-monochromatic.webp" alt="Docker logo">Docker<br>
+          <img src="image/Canonical Ubuntu.svg" alt="Ubuntu logo">Ubuntu<br>
+          <img src="image/Linux-Mint-Linuxmint-Logo-Icon-New-Ring-Filled.png" alt="Linux Mint logo">Linux Mint<br>
+          <img src="image/https___mariadb.com_wp-content_uploads_2019_11_mariadb-logo-vertical_blue.svg" alt="MariaDB logo">MariaDB<br>
+          <img src="image/Slack-mark.svg" alt="Slack logo">Slack<br>
+          <img src="image/cw_logomark_color.svg" alt="Chatwork logo">Chatwork<br>
+          <img src="image/app-icon_ZM_container-RGB.svg" alt="Zoom logo">Zoom<br>
+          <img src="image/Color.svg" alt="Todoist logo">Todoist<br>
+
         </p>
       </div>
     </section>
@@ -120,7 +128,6 @@
         Typescript<br>
         React<br>
         Rust<br>
-        Docker<br>
         </p>
       </div>
     </section>
@@ -151,11 +158,14 @@
       </div>
       <div class="tab-content">
         <div>
-        ■rano_portfolio <span class="atmark">a</span> outlook.jp
+          <div>
+            rano_portfolio <span class="atmark">a</span> outlook.jp
+          </div>
+          <div>
+            <a href="https://github.com/ranopub"><img src="image/GitHub_Logo.png" alt="GitHub logo"></a><br>        
+          </div>
         </div>
-        <p>
-          <a href="https://github.com/ranopub">■<u>GitHub</u></a><br>        
-        </p>
+        
       </div>
     </section>
 
@@ -166,6 +176,9 @@
       <p>"HTML5 LOGO" by <a href="https://www.w3.org">W3C</a> is licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
       <p>"Sass LOGO" by <a href="https://sass-lang.com/styleguide/brand/">Sass</a> is licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
       <p>This project is licensed under the MIT License, see <a href="https://licenses.opensource.jp/MIT/MIT.html">the MIT License</a></p>
+      <p>Docker and the Docker logo are trademarks or registered trademarks of Docker, Inc. in the United States and/or other countries. Docker, Inc. and other parties may also have trademark rights in other terms used herein.</p>
+      <p>Git Logo by Jason Long is licensed under the Creative Commons Attribution 3.0 Unported License.</p>
+      <p>Zoom and the Zoom logo are trademarks of Zoom Video Communications, Inc., registered in the U.S. and other countries.</p>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
