--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
           VBA<br>
         </p>
         <p>
+          <img src="image/vscode.svg" alt="VS Code logo">Visual Studio Code<br>
           <img src="image/webflow-mark-box-vector-blue.svg" alt="webflow logo">webflow<br>
           <img src="image/Git-Logo-2Color.svg" alt="Git logo">Git<br>
           <img src="image/github-mark.svg" alt="GitHub mark">GitHub<br>
